more wrapping issues on org dashboard

--- a/resources/sass/components/_card.scss
+++ b/resources/sass/components/_card.scss
@@ -67,17 +67,20 @@
   display: flex;
   flex-direction: row;
   padding: 0 3 * $base-spacing;
+  > * {
+    white-space: nowrap;
+  }
 }
 
 .item-title {
   margin-right: $small-spacing;
-  white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 
 .list-group-buttons {
   margin-left: auto;
+  padding-left: $small-spacing;
   a {
     text-decoration: none;
     // color: $medium-gray;
